--- a/1 Physics/6 Statistics/Problem_2/index.html
+++ b/1 Physics/6 Statistics/Problem_2/index.html
@@ -172,6 +172,129 @@
 <div class="document" itemscope="itemscope" itemtype="http://schema.org/Article" role="main">
 <div class="section" itemprop="articleBody">
 <h1 id="problem-2">Problem 2</h1>
+<h1 id="estimating-with-randomness-a-monte-carlo-adventure">🎯 <strong>Estimating π with Randomness: A Monte Carlo Adventure</strong></h1>
+<hr/>
+<h2 id="the-core-idea"><strong>🌱 The Core Idea</strong></h2>
+<p><strong>"Throw darts randomly → Count hits → Estimate π!"</strong><br/>
+✅ <strong>Circle Method</strong>: Drop points in a square &amp; count circle hits<br/>
+✅ <strong>Buffon’s Needle</strong>: Drop needles on lines &amp; count crosses  </p>
+<hr/>
+<h1 id="part-1-the-circle-method"><strong>Part 1: The Circle Method</strong> 🟡</h1>
+<h3 id="how-it-works"><strong>🎯 How It Works</strong></h3>
+<ol>
+<li>Draw a <strong>unit circle</strong> (radius=1) inside a <strong>2×2 square</strong> </li>
+<li><strong>Randomly throw "darts"</strong> (points) at the square  </li>
+<li><strong>Count hits inside circle</strong> vs total throws → Estimate π!  </li>
+</ol>
+<p><strong>Formula</strong>:<br/>
+<span class="arithmatex">\(<span class="arithmatex">\(\pi \approx 4 \times \frac{\text{Points Inside Circle}}{\text{Total Points}}\)</span>\)</span> </p>
+<hr/>
+<h2 id="python-simulation"><strong>💻 Python Simulation</strong></h2>
+<pre><code class="language-python">def buffons_needle(n_needles):
+    crosses = 0
+    plt.figure(figsize=(10,5))
+
+    for i in range(n_needles):
+        x = np.random.uniform(0, 1)  # Line spacing = 1
+        θ = np.random.uniform(0, np.pi/2)
+        tip = x + np.sin(θ)  # Needle length = 1
+
+        # Visualize first 100 needles
+        if i &lt; 100:
+            plt.plot([x, x+np.cos(θ)], [0, np.sin(θ)], 
+                    color='red' if tip &gt; 1 else 'blue', alpha=0.7)
+
+        if tip &gt; 1:
+            crosses += 1
+
+    plt.hlines(0, 0, 1, colors='black', linewidths=2)
+    plt.hlines(1, 0, 1, colors='black', linewidths=2)
+    plt.title(f"First 100 Needles (Total crosses: {crosses}/{n_needles})")
+    plt.axis('equal')
+    plt.show()
+
+    return (2 * n_needles) / crosses if crosses &gt; 0 else 0
+
+print(f"π ≈ {buffons_needle(100_000):.5f}")
+</code></pre>
+<hr/>
+<h2 id="key-observations"><strong>📊 Key Observations</strong></h2>
+<p><img alt="alt text" src="../image-1.png"/></p>
+<ul>
+<li><strong>100 points</strong>: Wild estimate (e.g., π≈3.2)  </li>
+<li><strong>10,000 points</strong>: Close! (e.g., π≈3.1416)  </li>
+<li><strong>More points = Better accuracy</strong> (but slower)  </li>
+</ul>
+<hr/>
+<h1 id="part-2-buffons-needle-method"><strong>Part 2: Buffon’s Needle Method</strong> 📌</h1>
+<h3 id="how-it-works_1"><strong>🎯 How It Works</strong></h3>
+<ol>
+<li>Draw <strong>parallel lines</strong> (spacing = needle length)  </li>
+<li><strong>Drop needles randomly</strong> </li>
+<li><strong>Count line crosses</strong> → Estimate π!  </li>
+</ol>
+<p><strong>Formula</strong>:<br/>
+<span class="arithmatex">\(<span class="arithmatex">\(\pi \approx \frac{2 \times \text{Total Needles}}{\text{Crosses}}\)</span>\)</span> </p>
+<hr/>
+<h2 id="python-simulation_1"><strong>💻 Python Simulation</strong></h2>
+<pre><code class="language-python">def buffons_needle(n_needles, needle_length=1, line_spacing=1):
+    crosses = 0
+
+    for _ in range(n_needles):
+        # Random needle position and angle
+        x = np.random.uniform(0, line_spacing)
+        θ = np.random.uniform(0, np.pi/2)
+
+        # Check if needle crosses line
+        if x &lt;= (needle_length/2)*np.sin(θ):
+            crosses += 1
+
+    pi_estimate = (2 * n_needles) / crosses if crosses &gt; 0 else 0
+    return pi_estimate
+
+print(f"π ≈ {buffons_needle(100_000):.5f}")  # Try increasing numbers!
+</code></pre>
+<hr/>
+<h2 id="method-comparison"><strong>📊 Method Comparison</strong></h2>
+<table>
+<thead>
+<tr>
+<th>Method</th>
+<th>Pros</th>
+<th>Cons</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td><strong>Circle</strong> 🟡</td>
+<td>Faster convergence</td>
+<td>Needs many points</td>
+</tr>
+<tr>
+<td><strong>Needle</strong> 📌</td>
+<td>Cool physical intuition</td>
+<td>Slower convergence</td>
+</tr>
+</tbody>
+</table>
+<hr/>
+<h2 id="real-world-applications"><strong>🌍 Real-World Applications</strong></h2>
+<ul>
+<li><strong>Quantum Physics</strong>: Particle behavior modeling  </li>
+<li><strong>Finance</strong>: Risk assessment in stock markets  </li>
+<li><strong>Computer Graphics</strong>: Ray tracing algorithms  </li>
+</ul>
+<hr/>
+<h2 id="try-these-experiments"><strong>🚀 Try These Experiments!</strong></h2>
+<ol>
+<li><strong>Vary point/needle counts</strong> → Watch accuracy improve  </li>
+<li><strong>Change needle length</strong> in Buffon’s method → See formula change  </li>
+<li><strong>Combine both methods</strong> → Average the estimates  </li>
+</ol>
+<blockquote>
+<p><em>"Monte Carlo methods: When math meets randomness!"</em> 🎲✨  </p>
+</blockquote>
+<p><strong>Run the code yourself to watch π emerge from chaos!</strong></p>
 </div>
 </div><footer>
 <div aria-label="Footer Navigation" class="rst-footer-buttons" role="navigation">
