deploy: 6cf36c7612f5f9e20d7fc2baf796c5f8bd405b9c

--- a/1 Physics/3 Waves/Problem_1/index.html
+++ b/1 Physics/3 Waves/Problem_1/index.html
@@ -227,53 +227,56 @@
 <p>```python
 import numpy as np
 import matplotlib.pyplot as plt</p>
-<h1 id="wave-parameters">Wave parameters</h1>
-<p>A = 1
-lambda_ = 1
-f = 1
-omega = 2 * np.pi * f
-k = 2 * np.pi / lambda_
-phi = 0
-radius = 5
-num_sources = 4  # square
-grid_size = 200</p>
-<h1 id="grid">Grid</h1>
-<p>x = np.linspace(-10, 10, grid_size)
-y = np.linspace(-10, 10, grid_size)
-X, Y = np.meshgrid(x, y)</p>
-<h1 id="source-positions-square-shape">Source positions (square shape)</h1>
-<p>theta = np.linspace(0, 2 * np.pi, num_sources, endpoint=False)
-source_x = radius * np.cos(theta)
-source_y = radius * np.sin(theta)</p>
-<h1 id="time-snapshot">Time snapshot</h1>
-<p>t = 0</p>
-<h1 id="wave-function">Wave function</h1>
+<h1 id="wave-parameters">🌊 Wave Parameters</h1>
+<p>A = 1               # Amplitude of the wave
+lambda_ = 1         # Wavelength (distance between peaks)
+f = 1               # Frequency (how many waves per second)
+omega = 2 * np.pi * f # Angular frequency
+k = 2 * np.pi / lambda_  # Wave number
+phi = 0             # Initial phase (same for all waves)</p>
+<h1 id="polygon-parameters">📐 Polygon Parameters</h1>
+<p>radius = 5          # Distance from the center to each source (polygon size)
+num_sources = 4     # Number of wave sources (e.g., 4 for a square)
+grid_size = 200     # Resolution of the grid for the water surface visualization</p>
+<h1 id="create-a-grid-for-the-water-surface">🎯 Create a Grid for the Water Surface</h1>
+<p>x = np.linspace(-10, 10, grid_size)  # X-axis range
+y = np.linspace(-10, 10, grid_size)  # Y-axis range
+X, Y = np.meshgrid(x, y)  # Creating a mesh grid for the surface</p>
+<h1 id="source-positions-placed-at-the-vertices-of-a-regular-polygon">📍 Source Positions (Placed at the Vertices of a Regular Polygon)</h1>
+<p>theta = np.linspace(0, 2 * np.pi, num_sources, endpoint=False)  # Angle positions of the sources
+source_x = radius * np.cos(theta)  # X coordinates of sources
+source_y = radius * np.sin(theta)  # Y coordinates of sources</p>
+<h1 id="time-snapshot-static-pattern">⏰ Time Snapshot (Static pattern)</h1>
+<p>t = 0  # Fixed time to visualize the pattern</p>
+<h1 id="wave-function-describes-the-wave-at-a-given-point-x-y">🌊 Wave Function - Describes the wave at a given point (X, Y)</h1>
 <p>def wave(x, y, sx, sy):
-    r = np.sqrt((x - sx)<strong>2 + (y - sy)</strong>2)
-    return A * np.cos(k * r - omega * t + phi)</p>
-<h1 id="total-wave-from-all-sources">Total wave from all sources</h1>
-<p>total = np.zeros_like(X)
+    r = np.sqrt((x - sx)<strong>2 + (y - sy)</strong>2)  # Distance from source to the point
+    return A * np.cos(k * r - omega * t + phi)  # Wave equation: displacement based on distance</p>
+<h1 id="total-wave-from-all-sources-superposition-principle">🌊 Total Wave from All Sources (Superposition Principle)</h1>
+<p>total = np.zeros_like(X)  # Initialize the grid for total displacement
 for i in range(num_sources):
-    total += wave(X, Y, source_x[i], source_y[i])
-plt.figure(figsize=(8, 6))
-plt.imshow(total, extent=[-10, 10, -10, 10], cmap='coolwarm', origin='lower')
-plt.colorbar(label='Wave Displacement')
-plt.scatter(source_x, source_y, color='yellow', edgecolors='black', s=100, label='Sources')
-plt.title("Interference Pattern (Heatmap)", fontsize=14)
-plt.xlabel("X")
-plt.ylabel("Y")
-plt.grid(True, linestyle='--', alpha=0.3)
-plt.legend()
-plt.show()
-plt.figure(figsize=(8, 6))
-plt.contour(X, Y, total, levels=20, cmap='plasma')
-plt.scatter(source_x, source_y, color='yellow', edgecolors='black', s=100)
-plt.title("Contour Lines of Wave Interference")
-plt.xlabel("X")
-plt.ylabel("Y")
-plt.grid(True, linestyle='--', alpha=0.3)
-plt.show()
-<img alt="alt text" src="../image-1.png"/></p>
+    total += wave(X, Y, source_x[i], source_y[i])  # Adding waves from all sources</p>
+<h1 id="heatmap-visualization-of-the-interference-pattern">🌈 Heatmap Visualization of the Interference Pattern</h1>
+<p>plt.figure(figsize=(8, 6))
+plt.imshow(total, extent=[-10, 10, -10, 10], cmap='coolwarm', origin='lower')  # Heatmap of wave displacement
+plt.colorbar(label='Wave Displacement')  # Color bar to show the displacement range
+plt.scatter(source_x, source_y, color='yellow', edgecolors='black', s=100, label='Sources')  # Mark sources
+plt.title("Interference Pattern (Heatmap)", fontsize=14)  # Plot title
+plt.xlabel("X Position")  # X-axis label
+plt.ylabel("Y Position")  # Y-axis label
+plt.grid(True, linestyle='--', alpha=0.3)  # Grid with dashed lines
+plt.legend()  # Display the legend
+plt.show()</p>
+<h1 id="contour-plot-of-wave-interference-show-regions-of-constructivedestructive-interference">🌀 Contour Plot of Wave Interference (Show regions of constructive/destructive interference)</h1>
+<p>plt.figure(figsize=(8, 6))
+plt.contour(X, Y, total, levels=20, cmap='plasma')  # Contour plot with wave levels
+plt.scatter(source_x, source_y, color='yellow', edgecolors='black', s=100)  # Mark sources
+plt.title("Contour Lines of Wave Interference", fontsize=14)  # Plot title
+plt.xlabel("X Position")  # X-axis label
+plt.ylabel("Y Position")  # Y-axis label
+plt.grid(True, linestyle='--', alpha=0.3)  # Grid with dashed lines
+plt.show()</p>
+<p><img alt="alt text" src="../image-1.png"/></p>
 </div>
 </div><footer>
 <div aria-label="Footer Navigation" class="rst-footer-buttons" role="navigation">
