--- a/1 Physics/3 Waves/Problem_1/index.html
+++ b/1 Physics/3 Waves/Problem_1/index.html
@@ -224,40 +224,47 @@
 <p>We'll use Python + Matplotlib to simulate and visualize the interference.</p>
 <hr/>
 <h2 id="python-simulation">🧪 Python Simulation</h2>
-<p>```python
-import numpy as np
-import matplotlib.pyplot as plt</p>
-<h1 id="wave-parameters">🌊 Wave Parameters</h1>
-<p>A = 1               # Amplitude of the wave
+<pre><code class="language-python">import numpy as np
+import matplotlib.pyplot as plt
+
+# 🌊 Wave Parameters
+A = 1               # Amplitude of the wave
 lambda_ = 1         # Wavelength (distance between peaks)
 f = 1               # Frequency (how many waves per second)
 omega = 2 * np.pi * f # Angular frequency
 k = 2 * np.pi / lambda_  # Wave number
-phi = 0             # Initial phase (same for all waves)</p>
-<h1 id="polygon-parameters">📐 Polygon Parameters</h1>
-<p>radius = 5          # Distance from the center to each source (polygon size)
+phi = 0             # Initial phase (same for all waves)
+
+# 📐 Polygon Parameters
+radius = 5          # Distance from the center to each source (polygon size)
 num_sources = 4     # Number of wave sources (e.g., 4 for a square)
-grid_size = 200     # Resolution of the grid for the water surface visualization</p>
-<h1 id="create-a-grid-for-the-water-surface">🎯 Create a Grid for the Water Surface</h1>
-<p>x = np.linspace(-10, 10, grid_size)  # X-axis range
+grid_size = 200     # Resolution of the grid for the water surface visualization
+
+# 🎯 Create a Grid for the Water Surface
+x = np.linspace(-10, 10, grid_size)  # X-axis range
 y = np.linspace(-10, 10, grid_size)  # Y-axis range
-X, Y = np.meshgrid(x, y)  # Creating a mesh grid for the surface</p>
-<h1 id="source-positions-placed-at-the-vertices-of-a-regular-polygon">📍 Source Positions (Placed at the Vertices of a Regular Polygon)</h1>
-<p>theta = np.linspace(0, 2 * np.pi, num_sources, endpoint=False)  # Angle positions of the sources
+X, Y = np.meshgrid(x, y)  # Creating a mesh grid for the surface
+
+# 📍 Source Positions (Placed at the Vertices of a Regular Polygon)
+theta = np.linspace(0, 2 * np.pi, num_sources, endpoint=False)  # Angle positions of the sources
 source_x = radius * np.cos(theta)  # X coordinates of sources
-source_y = radius * np.sin(theta)  # Y coordinates of sources</p>
-<h1 id="time-snapshot-static-pattern">⏰ Time Snapshot (Static pattern)</h1>
-<p>t = 0  # Fixed time to visualize the pattern</p>
-<h1 id="wave-function-describes-the-wave-at-a-given-point-x-y">🌊 Wave Function - Describes the wave at a given point (X, Y)</h1>
-<p>def wave(x, y, sx, sy):
-    r = np.sqrt((x - sx)<strong>2 + (y - sy)</strong>2)  # Distance from source to the point
-    return A * np.cos(k * r - omega * t + phi)  # Wave equation: displacement based on distance</p>
-<h1 id="total-wave-from-all-sources-superposition-principle">🌊 Total Wave from All Sources (Superposition Principle)</h1>
-<p>total = np.zeros_like(X)  # Initialize the grid for total displacement
+source_y = radius * np.sin(theta)  # Y coordinates of sources
+
+# ⏰ Time Snapshot (Static pattern)
+t = 0  # Fixed time to visualize the pattern
+
+# 🌊 Wave Function - Describes the wave at a given point (X, Y)
+def wave(x, y, sx, sy):
+    r = np.sqrt((x - sx)**2 + (y - sy)**2)  # Distance from source to the point
+    return A * np.cos(k * r - omega * t + phi)  # Wave equation: displacement based on distance
+
+# 🌊 Total Wave from All Sources (Superposition Principle)
+total = np.zeros_like(X)  # Initialize the grid for total displacement
 for i in range(num_sources):
-    total += wave(X, Y, source_x[i], source_y[i])  # Adding waves from all sources</p>
-<h1 id="heatmap-visualization-of-the-interference-pattern">🌈 Heatmap Visualization of the Interference Pattern</h1>
-<p>plt.figure(figsize=(8, 6))
+    total += wave(X, Y, source_x[i], source_y[i])  # Adding waves from all sources
+
+# 🌈 Heatmap Visualization of the Interference Pattern
+plt.figure(figsize=(8, 6))
 plt.imshow(total, extent=[-10, 10, -10, 10], cmap='coolwarm', origin='lower')  # Heatmap of wave displacement
 plt.colorbar(label='Wave Displacement')  # Color bar to show the displacement range
 plt.scatter(source_x, source_y, color='yellow', edgecolors='black', s=100, label='Sources')  # Mark sources
@@ -266,16 +273,18 @@ plt.xlabel("X Position")  # X-axis label
 plt.ylabel("Y Position")  # Y-axis label
 plt.grid(True, linestyle='--', alpha=0.3)  # Grid with dashed lines
 plt.legend()  # Display the legend
-plt.show()</p>
-<h1 id="contour-plot-of-wave-interference-show-regions-of-constructivedestructive-interference">🌀 Contour Plot of Wave Interference (Show regions of constructive/destructive interference)</h1>
-<p>plt.figure(figsize=(8, 6))
+plt.show()
+
+# 🌀 Contour Plot of Wave Interference (Show regions of constructive/destructive interference)
+plt.figure(figsize=(8, 6))
 plt.contour(X, Y, total, levels=20, cmap='plasma')  # Contour plot with wave levels
 plt.scatter(source_x, source_y, color='yellow', edgecolors='black', s=100)  # Mark sources
 plt.title("Contour Lines of Wave Interference", fontsize=14)  # Plot title
 plt.xlabel("X Position")  # X-axis label
 plt.ylabel("Y Position")  # Y-axis label
 plt.grid(True, linestyle='--', alpha=0.3)  # Grid with dashed lines
-plt.show()</p>
+plt.show()
+</code></pre>
 <p><img alt="alt text" src="../image-1.png"/></p>
 </div>
 </div><footer>
