deploy: 2cb634f65b9016dbbf3b89bbe326ac28a1ce494b

--- a/1 Physics/3 Waves/Problem_1/index.html
+++ b/1 Physics/3 Waves/Problem_1/index.html
@@ -216,8 +216,9 @@
 <hr/>
 <h2 id="superposition-adding-the-waves-together">🔗 Superposition: Adding the Waves Together</h2>
 <p>To find the <strong>total wave height</strong> at any point on the grid, we add the contributions from all sources:</p>
+<p>Sure! Here's the formula:</p>
 <div class="arithmatex">\[
-\text{Total wave:} \quad h_{\text{total}}(x, y) = \sum_{i=1}^{N} A \cdot \cos(k \cdot r_i - \omega \cdot t + \phi)
+\eta(x, y, t) = \frac{A}{\sqrt{r}} \cos(k r - \omega t + \phi)
 \]</div>
 <hr/>
 <h3 id="6-visualize">6. <strong>Visualize</strong></h3>
